src/test/deca/syntax/invalid/SansObjet/Inst8-While-InvalidCondition.deca
// Description:
//    While structure with complex condition.
//
// Results:
//    Syntax error
//    11:19 left-hand side of assignment is not an lvalue
//
// Historique:
//    cree le 08/01/2022

{
        while (x = y + z > u = v * w) { ; }
}
